#test for the size

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </nav>
 
-    <div id="main" class="bg-img"> 
+    <div id="main"> 
         <div class="timer text-center">
             <h3><span id="timeLeft">Time Remaining: 15 Seconds</span></h3>
         </div>
