Small change to fix the main page

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="row text-center">
             <div class="col-sm-3"></div>
             <div class="col-sm-3">               
-                <h3><a class="answer" id="answer1" href="#" data-name="wrong">answer1</a></h3>
+                <h3><a class="answer" id="answer1" href="#" data-name="wrong"></a></h3>
             </div>       
             <div class="col-sm-3">                
-                <h3><a class="answer" id="answer2" href="#" data-name="wrong">answer2</a></h3>
+                <h3><a class="answer" id="answer2" href="#" data-name="wrong"></a></h3>
             </div>  
             <div class="col-sm-3"></div>
             </div> 
@@ -47,10 +47,10 @@
             <div class="col-sm-3"></div>
             <div class="col-sm-3">
                 <!-- <h3 class="selection"><span id="answer3" class="answer">answer3</span></h3> -->
-                <h3><a class="answer" id="answer3" href="#" data-name="wrong">answer3</a></h3>
+                <h3><a class="answer" id="answer3" href="#" data-name="wrong"></a></h3>
             </div>       
             <div class="col-sm-3">
-                    <h3><a class="answer" id="answer4" href="#" data-name="wrong">answer4</a></h3>
+                    <h3><a class="answer" id="answer4" href="#" data-name="wrong"></a></h3>
             </div> 
             <div class="col-sm-3"></div>
         </div>  
